--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -1487,17 +1487,105 @@ text-align: center;
 
 .asian_wrapper{
     position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.asian_expand_button{
+    margin: 0 auto;
+    margin-top: 48px;
+    margin-bottom: 48px;
+    border: 1px solid #fefefe66;
+    font-size: 17px;
+
+    letter-spacing: -0.022em;
+    min-width: 50px;
+    max-width: 220px;
+    font-size: 17px;
+    line-height: 1.18;
+    font-weight: 400;
+    letter-spacing: -0.022em;
+    min-width: 26px;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    font-size: 17px;
+    line-height: 1.18;
+    font-weight: 400;
+    letter-spacing: -0.022em;
+    min-width: 28px;
+    border-radius: 980px;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    vertical-align: center;
+}
+.asian_expand_button *{
+    user-select: none;
+    pointer-events: none;
+}
+.asian_expand_button_icon{
+    position: relative;
+    width:19px;
+    height:19px;
+    border-radius: 50%;
+    border:1px solid #fefefe66;
+    margin: 9px 0;
+    margin-left: 9px;
+}
+.asian_expand_button_icon::before{
+    position: absolute;
+    content: "";
+    left:50%;
+    top:50%;
+    width:19px;
+    height:1px;
+    transform: translate(-50%, -50%);
+    background-color: #fefefe66;
+}
+.asian_expand_button_icon::after{
+    position: absolute;
+    content: "";
+    left:50%;
+    top:50%;
+    width:1px;
+    height:19px;
+    transform: translate(-50%, -50%);
+    background-color: #fefefe66;
+}
+.asian_expand_button_text{
+    margin: 9px 11px;
+
+}
+.asian_cover{
+    position: absolute;
+    z-index: 3;
+    background-color: var(--main-color);
+    width:100%;
+    height: 100%;
+    top:0%;
+    left:0%;
+    border-left: 1px solid #fefefebb;
+    border-top: 1px solid #fefefebb;
+    transform: translate(-50%, -50%);
 }
 .asian_inner{
-    display:flex;
-    flex-direction: row;
+    position: relative;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
 
 }
 .asian_vertical_img{
     position: absolute;
     right:0;
     top:0;
-    transform: translateX(62%);
+    transform: translateX(68%)translateY(-40%);
+}
+.asian_inner_text_wrapper{
+text-align: left;
+    margin-left: 2%;
+    padding: 0 15px;
 }
 .asian_inner_text{
     color:#ffffff;
