more new design

--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,7 @@ body{
     --main-color-very-light:#288EE2;
     --main-color-super-light:#6FB4EB;
     --accent-second:#F24C27;
+    --not-black-black:#1F1F1F;
     --gutter:60px;
     --no-color:#19191900;
     --resolution-color-title:#cccccc;
