--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -587,46 +587,6 @@ text-align: center;
 .vertical_horizontal_inner p{
     font-weight: lighter;
 }
-.features_wrapper{
-
-}
-.feature{
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    padding-bottom:230px;
-}
-.feature_title{
-    padding-left: 35px;
-    position: relative;
-    line-height: 0;
-    margin-bottom: 15px;
-    max-width: 585px;
-}
-.feature_title::before{
-    content: "";
-    background: #4DC4EF;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    transform: translateY(-50%);
-}
-.feature_text{
-    flex: 0 0 30%;
-    flex-direction: column;
-    text-align: left;
-
-}
-.feature_image{
-    position:absolute;
-    right:0;
-    top:0;
-    transform: translate(30%, -25%);
-
-}
 .more_features_wrapper{
     display: flex;
     flex-flow: column wrap;
@@ -1048,6 +1008,13 @@ text-align: center;
     text-align: left;
     color: #ffffff99;
 }
+.simple_text{
+    color:#ffffff;
+    font-size: 19px;
+    line-height: 1.4211026316;
+    font-weight: 600;
+    letter-spacing: .012em;
+}
 .subsection_title::before{
     content: "";
     display: block;
@@ -1121,7 +1088,7 @@ text-align: center;
     top:0;
     transform-origin: top right;
     transform: rotate(-90deg) translate(0, -125%);
-    color: #fefefe;
+    color: var(--resolution-color-title);
     width: max-content;
     height: max-content;
 
@@ -1399,13 +1366,13 @@ text-align: center;
     margin-right: auto;
     margin-bottom: 0;
     margin-top: 0;
-    color: #fefefebb;
+    color: var(--resolution-color-title);
 }
 /*.ratio_circle:hover{
     background-color: #fefefe;
 }
 .ratio_circle:hover > div > p{
-    color:#191919;
+    color:#1F1F1F;
 }*/
 
 .languages_outer{
@@ -1601,6 +1568,134 @@ text-align: left;
     font-weight: 600;
     letter-spacing: .012em;
 }
+
+.file_formats_wrapper{
+    position: relative;
+    max-width: 1232px;
+}
+.file_formats_header{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 85px;
+    border-top:1px solid #fefefe66;
+    border-bottom:1px solid #fefefe66;
+    border-right:1px solid #fefefe66;
+
+}
+.file_format_title{
+    cursor: pointer;
+    color:#ffffff;
+    font-size: 19px;
+    line-height: 1.4211026316;
+    font-weight: 600;
+    letter-spacing: .012em;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 6px;
+
+}
+.file_format_title_selected{
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#1F1F1F;
+    font-size: 19px;
+    line-height: 1.4211026316;
+    font-weight: 600;
+    letter-spacing: .012em;
+    text-transform: uppercase;
+    background-color: #fefefe;
+    border-bottom:3px solid var(--resolution-color-title);
+}
+.file_formats_content_1{
+    padding-top:24px;
+    display:grid;
+    border-right:1px solid #fefefe66;
+    padding-right: 20px;
+    grid-template-columns: repeat(4, 1fr);
+}
+.file_format_item{
+    position: relative;
+    margin-bottom: 30px;
+    text-align: left;
+    color:#ffffff;
+    cursor: pointer;
+    color:#ffffff;
+    font-size: 19px;
+    line-height: 1.15;
+    font-weight: 600;
+    letter-spacing: .009em;
+    list-style: none;
+    /*border-bottom: 1px solid #fefefe66;*/
+}
+.file_format_item::before{
+    position: absolute;
+    content:'';
+    width:5px;
+    height:28px;
+    bottom:0;
+    left: -15px;
+    transform-origin: bottom left;
+    background-color: #fefefe66;
+    transform: rotate(15deg);
+
+
+}
+.file_format_item::after{
+    position: absolute;
+    content:'';
+    width:1px;
+    height:28px;
+    bottom:0;
+    left: -6px;
+    transform-origin: bottom left;
+    background-color: #fefefe66;
+    transform: rotate(15deg);
+
+}
+
+
+.features_wrapper{
+    position: relative;
+
+}
+.feature{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    padding-bottom:230px;
+}
+.feature_text_outer{
+    display:grid;
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: 1fr;
+}
+.feature_text_wrapper{
+    max-width: 500px;
+    text-align: left;
+    padding-left:20px;
+    margin-top: 180px;
+
+}
+.feature_title{
+    padding-left: 35px;
+    position: relative;
+    line-height: 0;
+    margin-bottom: 15px;
+    max-width: 585px;
+}
+
+.feature_image{
+    position:fixed;
+    right:0;
+    top:0;
+    transform: translate(30%, -16%);
+
+}
+
 
 
 
@@ -1920,7 +2015,7 @@ text-align: left;
     z-index: 2;
 }
 .version_dropdown h2{
-    color: #191919;
+    color: #1F1F1F;
     margin: 0;
 }
 .version_dropdown_select{
@@ -1931,7 +2026,7 @@ text-align: left;
     top:50%;
     right:0%;
     transform: translate(0%, -50%);
-    fill: #191919;
+    fill: #1F1F1F;
 }
 
 
@@ -1959,7 +2054,7 @@ text-align: left;
     z-index: 2;
 }
 .rent_dropdown p, .rent_dropdown_item p{
-    color: #191919;
+    color: #1F1F1F;
     margin: 0;
     font-size: 19px;
 }
@@ -1971,7 +2066,7 @@ text-align: left;
     top:50%;
     right:0%;
     transform: translate(0%, -50%);
-    fill: #191919;
+    fill: #1F1F1F;
 }
 
 .installment_dropdown{
@@ -1998,7 +2093,7 @@ text-align: left;
     z-index: 2;
 }
 .installment_dropdown p, .installment_dropdown_item p{
-    color: #191919;
+    color: #1F1F1F;
     margin: 0;
     font-size: 19px;
 }
@@ -2010,7 +2105,7 @@ text-align: left;
     top:50%;
     right:0%;
     transform: translate(0%, -50%);
-    fill: #191919;
+    fill: #1F1F1F;
 }
 
 
@@ -2018,7 +2113,7 @@ text-align: left;
 /*video button*/
 .video_wrapper{
     position: relative;
-    width: 1356px;
+    width: 1232px;
     height:398px;
     display: flex;
     flex-direction: column;
