--- a/styles/global.css
+++ b/styles/global.css
@@ -60,8 +60,8 @@ p, h1, h2, h3, h4, h5{
 }
 ul{
     list-style: none;
-    margin:0;
-    padding:0;
+/*    margin:0;
+    padding:0;*/
 }
 li{
     color:#ffffff;
