--- a/components/homeMain.module.css
+++ b/components/homeMain.module.css
@@ -480,7 +480,7 @@
 
 /*slider animation*/
 .App {
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 
