--- a/components/homeMain2.module.css
+++ b/components/homeMain2.module.css
@@ -214,7 +214,7 @@
 
 }
 .ez_logo_anim_inner_text{
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     position: absolute;
     font-size: 60px;
     color:#ffffff;
@@ -249,7 +249,7 @@
 
 }
 .ec_logo_anim_inner_text{
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     position: absolute;
     font-size: 60px;
     color:#ffffff;
@@ -284,7 +284,7 @@
 
 }
 .md_logo_anim_inner_text{
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     position: absolute;
     font-size: 60px;
     color:#ffffff;
@@ -325,7 +325,7 @@
     */
 }
 .ep_logo_anim_inner_text{
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     position: absolute;
     font-size: 60px;
     color:#ffffff;
