--- a/components/navbar2.module.css
+++ b/components/navbar2.module.css
@@ -48,6 +48,7 @@
     display:inline-block;
     position: relative;
     text-decoration: none;
+    font-weight: 500;
 }
 .nav_ul.text li a::before{
     content: "";
@@ -83,7 +84,9 @@
 }
 .nav_search_svg{
     margin-right: 6px;
-}.nav_cart_svg{
+
+}
+.nav_cart_svg{
 
 }
 
@@ -146,6 +149,7 @@
 .cart_wrapper, .search_wrapper, .profile_wrapper svg{
     /*transition: 0.3s;*/
 }
+
 .cart_wrapper:hover svg{
     transform: scale(1.3);
     fill:#D92B3A;
