--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;400;700;1,300&display=swap');
-html,
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');html,
 body{
     padding:0;
     margin:0;
@@ -32,6 +31,8 @@ body{
 }
 
 a{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     color:#ffffff;
     text-decoration: none;
 }
@@ -47,6 +48,7 @@ img {
 }
 
 p, h1, h2, h3, h4, h5{
+    font-family: 'Montserrat', sans-serif;
     color:#ffffff;
 }
 .py-2{
@@ -64,6 +66,7 @@ ul{
     padding:0;*/
 }
 li{
+    font-family: 'Montserrat', sans-serif;
     color:#ffffff;
 }
 
