--- a/styles/global.css
+++ b/styles/global.css
@@ -1,16 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');html,
-body{
-    padding:0;
-    margin:0;
-    /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.6;
-    font-size: 18px;
-    font-weight: 100;
-    scroll-behavior: smooth;
-    background:#12263a;
-    background:#0E1F2F;
-    /*filter: grayscale(100%);*/
+:root{
     --main-color:#051624;
     --main-color-light:#072136;
     --main-color-hover:#0C375A;
@@ -24,10 +13,22 @@ body{
     --resolution-color-title:#cccccc;
     --ratio-height:480px;
 }
+body{
+    padding:0;
+    margin:0;
+    /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.6;
+    font-size: 1rem;
+    font-weight: 400;
+    scroll-behavior: smooth;
+    background:#12263a;
+    background:#0E1F2F;
+    /*filter: grayscale(100%);*/
+}
 
 *, ::before, ::after{
     box-sizing: border-box;
-    cursor: default;
 }
 
 a{
@@ -49,7 +50,10 @@ img {
 
 p, h1, h2, h3, h4, h5{
     font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
     color:#ffffff;
+    margin-top: 0;
+    margin-bottom: 0.53rem;
 }
 .py-2{
     position: relative;
@@ -68,6 +72,7 @@ ul{
 li{
     font-family: 'Montserrat', sans-serif;
     color:#ffffff;
+    font-weight: 300;
 }
 
 
