--- a/components/navbar2.module.css
+++ b/components/navbar2.module.css
@@ -23,18 +23,18 @@
     justify-content: space-between;
 }
 .nav_sec_left{
-    flex:0 0 38%;
+    flex:0 0 43%;
 }
 .nav_sec_left  ul li{
     margin-right:6%;
     white-space: nowrap;
 }
 .nav_sec_center{
-    flex:0 0 20%;
+    flex:0 0 12%;
     position: relative;
 }
 .nav_sec_right{
-    flex:0 0 38%;
+    flex:0 0 43%;
 }
 .nav_ul{
     display:flex;
@@ -52,22 +52,7 @@
     position: relative;
     text-decoration: none;
     font-weight: 500;
-}
-.nav_ul.text li a::before{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 1px;
-    background-color: currentColor;
-    transform: scaleX(0) translateZ(0);
-    transform-origin: 100% 50%;
-    transition: transform .3s cubic-bezier(.25,.8,.25,1);
-}
-.nav_ul.text li a:hover::before{
-    transform: scaleX(1) translateZ(0);
-    transform-origin: 0 50%;
+    white-space: nowrap;
 }
 
 .nav_icon_wrapper{
@@ -92,9 +77,6 @@
 .nav_cart_svg{
 
 }
-
-
-
 .navbar_wrapper_scroll{
     position: fixed;
     top:48px;
@@ -122,6 +104,8 @@
 }
 .nav_li_scroll a{
     color:#12263a;
+    white-space: nowrap;
+
 }
 .nav_li_scroll svg{
     fill:#12263a;
@@ -134,6 +118,27 @@
     transition: all 0.8s cubic-bezier(.25,.8,.25,1);
 
 
+}
+.nav_link_a::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background-color: currentColor;
+    transform: scaleX(0) translateZ(0);
+    transform-origin: 100% 50%;
+    transition: transform .3s cubic-bezier(.25,.8,.25,1);
+}
+.nav_link_a:hover::before{
+    transform: scaleX(1) translateZ(0);
+    transform-origin: 0 50%;
+}
+.nav_link_a{
+    position: relative;
+    font-weight: 300;
+    font-size: 0.96rem;
 }
 .menu_button {
     outline: none;
