--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,7 @@
     --main-color-somewhat-light:#186EB4;
     --main-color-very-light:#288EE2;
     --main-color-super-light:#6FB4EB;
+    --main-color-cta:#0064B0;
     --accent-second:#F24C27;
     --not-black-black:#1F1F1F;
     --gutter:60px;
@@ -13,7 +14,8 @@
     --resolution-color-title:#cccccc;
     --ratio-height:480px;
 }
-body{
+html, body{
+    /*scroll-snap-type: y proximity;*/
     padding:0;
     margin:0;
     /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
@@ -25,6 +27,7 @@ body{
     background:#12263a;
     background:#0E1F2F;
     /*filter: grayscale(100%);*/
+    box-sizing: border-box;
 }
 
 *, ::before, ::after{
