--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -1,3 +1,5 @@
+@use postcss-preset-env(stage: 0, browsers: "last 2 versions");
+
 .main_wrapper{
     position:relative;
     width:100%;
@@ -139,7 +141,7 @@ background: #ffffff;
 .container{
     position: relative;
     width: 100%;
-    max-width: 70rem;
+    /*max-width: 70rem;*/
     padding-left: 2.5rem;
     padding-right: 2.5rem;
     margin: 0 auto;
@@ -1237,11 +1239,13 @@ text-align: center;
 .language_text{
     text-align: left;
     word-break: keep-all;
-    font-size: 30px;
+    font-size: 29px;
     font-weight: 600;
     line-height: 1.9;
-    letter-spacing: .007em;
-    width:1005px;
+    letter-spacing: 0.001rem;
+    width:1015px;
+    max-width:1015px;
+    min-width:1015px;
     text-align: justify;
     margin: 0 auto;
 }
@@ -1547,13 +1551,13 @@ text-align: center;
 
 @media (min-width: 992px) {
     .page_top_wrapper {
-        max-width: 960px;
+        max-width: 880px;
     }
 }
 
 @media (min-width: 1200px) {
     .page_top_wrapper {
-        max-width: 960px;
+        max-width: 880px;
     }
 }
 .page_top_inner{
@@ -1601,7 +1605,6 @@ grid-column-gap: 38px;
 }
 .main_title_wrapper{
     grid-area: title;
-    padding-top: 20px;
     padding-left: 1rem;
     padding-right: 1rem;
 
@@ -1617,49 +1620,44 @@ grid-column-gap: 38px;
 .free_trial_wrapper{
     grid-area: free;
     text-align: right;
-    margin-top:68px;
+    /*margin-top:68px*/;
 
 }
-.free_trial_button{
+.free_trial_button, .license_editions_button, .go_to_checkout_button{
     margin:0 auto;
     color:#ffffff;
     font-weight: 500;
-    background-color: #0064B0;
+    background-color: var(--main-color-cta);
     border: none;
-    width:250px;
-    padding: 6px 20px;
+    width:211px;
+    white-space: nowrap;
+    padding: 6px 23px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     cursor: pointer;
     border-radius: 50px;
+}
+.free_trial_button{
+    margin-right: 30px;
+}
+.license_editions_button{
+    margin-left: 30px;
+
 }
 .license_editions_wrapper{
     grid-area: license;
     text-align: left;
-    margin-top:68px;
+    /*margin-top:68px*/;
 
-}
-.license_editions_button{
-    margin:0 auto;
-    color:#ffffff;
-    font-weight: 500;
-    background-color: #0064B0;
-    border: none;
-    width:250px;
-    padding: 6px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 50px;
 }
 .pricing_options_wrapper{
     grid-area: options;
     display: flex;
-    margin-top:68px;
     flex-direction: row;
+    padding-top: 3.5rem;
     justify-content: space-between;
+
 }
 .pricing_options_description{
 
@@ -1669,48 +1667,40 @@ grid-column-gap: 38px;
     font-size:1.8rem;
     font-weight: 500;
     margin:0;
+    line-height: 0.9;
 }
 .pricing_options_description_title span{
-    font-size:1.38rem;
+    font-size:1.23rem;
     font-weight: 200;
+    letter-spacing: 0.006rem;
 }
 .pricing_options_dropdown{
-    margin-top: 46px;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 
 }
 .payment_select_wrapper{
     grid-area: payment;
-    margin-top:68px;
+    /*margin-top:68px*/;
 
 }
 .payment_select_inner{
     border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
 
 
 }
 .go_to_checkout_wrapper{
     grid-area: checkout;
-    margin-top:68px;
+    /*margin-top:68px*/;
 
-}
-.go_to_checkout_button{
-    margin:0 auto;
-    color:#ffffff;
-    font-weight: 500;
-    background-color: #0064B0;
-    border: none;
-    width:250px;
-    padding: 6px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 50px;
 }
 .price_wrapper{
     grid-area: price;
-    margin-top:68px;
+    /*margin-top:68px*/;
     text-align: right;
 
 }
@@ -1724,7 +1714,7 @@ grid-column-gap: 38px;
 }
 .scroll_down_wrapper{
     grid-area: more;
-    margin-top:68px;
+    /*margin-top:68px*/;
 
 }
 .scroll_down_svg{
@@ -1734,13 +1724,10 @@ grid-column-gap: 38px;
 }
 .scroll_down_svg svg{
     fill:#fefefe66;
-    transform: rotate(90deg) scaleY(2) scaleX(2);
+    transform: rotate(90deg) scaleY(1.2) scaleX(1.2);
 
 }
     /*media for top page grid*/
-@media (min-width: 992px) {
-
-}
 
 
     /*secondary nav*/
@@ -1940,8 +1927,7 @@ grid-column-gap: 38px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 11px 0;
-    border-bottom: 1px solid #fff;
+    padding: 20px 0;
 }
 .product_versions_label{
     font-size: max(12px,.83vw);
@@ -1949,6 +1935,7 @@ grid-column-gap: 38px;
     letter-spacing: .05em;
     text-transform: uppercase;
     font-weight: 500;
+    margin:0;
 }
 .product_versions_list{
     display: flex;
@@ -1974,7 +1961,16 @@ grid-column-gap: 38px;
     color:#919191;
     cursor: pointer;
     white-space: nowrap;
+    font-weight: 300;
+
+
+}
+.product_label_wrapper_on{
+    color:#ffffff;
+    cursor: pointer;
+    white-space: nowrap;
     font-weight: 500;
+    text-decoration: underline;
 
 
 }
@@ -1985,7 +1981,7 @@ grid-column-gap: 38px;
     align-items: center;
 
     height: 50px;
-    border-bottom: 1px solid #fff;
+/*    border-bottom: 1px solid #fff;*/
     position: relative;
     z-index: 2;
 }
@@ -2051,12 +2047,30 @@ grid-column-gap: 38px;
     height: max-content;
     width: 200px;
     padding-left: 6px;
+    height:48px;
     cursor: pointer;
     z-index: 2;
 }
-.version_dropdown h2{
+.selected_version{
+    position: absolute;
+    top:50%;
+    left:3%;
+    transform: translate(0%, -50%);
+}
+.selected_version h2{
     color: #191919;
     margin: 0;
+}
+.version_inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.version_info_icon{
+    position: absolute;
+    top:24%;
+    right:-11%;
+    transform: translate(50%, -50%);
 }
 .version_dropdown_select{
     display: none;
@@ -2082,6 +2096,8 @@ grid-column-gap: 38px;
     padding-left: 6px;
     cursor: pointer;
     z-index: 2;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 .rent_dropdown p{
     font-weight: 300;
@@ -2125,6 +2141,8 @@ grid-column-gap: 38px;
     padding-left: 6px;
     cursor: pointer;
     z-index: 2;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 .installment_dropdown_item{
     position: relative;
