--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,7 @@
     --main-color-cta:#0064B0;
     --accent-second:#F24C27;
     --not-black-black:#1F1F1F;
+    --not-white:#fefefe;
     --gutter:60px;
     --no-color:#19191900;
     --resolution-color-title:#cccccc;
